# fastcosyvoice-triton

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  test_triton_client.py
FastCosyVoice/: .gitignore  README.md  benchmark_llm.py  pyproject.toml  requirements.txt  run.py  run_basic.py  run_fast.py  run_instruct.py  run_offline.py  webui.py
FastCosyVoice/.github/workflows/: lint.yml
FastCosyVoice/cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
FastCosyVoice/cosyvoice/flow/: flow.py  flow_matching.py
FastCosyVoice/cosyvoice/llm/: llm.py
FastCosyVoice/cosyvoice/utils/: common.py  file_utils.py
FastCosyVoice/debug/: analyze_trt_llm_sizes.py  debug_audio.py  debug_minimal.py  debug_onnx.py  debug_trt.py  test_trt.py
FastCosyVoice/docker/: Dockerfile
FastCosyVoice/fastcosyvoice/: __init__.py  cosyvoice.py  frontend.py  model.py
FastCosyVoice/refs/: audio.txt
FastCosyVoice/scripts/: convert_cosyvoice3_to_hf.py
models/cosyvoice/: config.pbtxt
models/cosyvoice/1/: __init__.py  model.py
