[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastcosyvoice"
version = "0.1.0"
description = "Faster inference for CoxyVoice3"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "conformer>=0.3.2",
    "diffusers>=0.36.0",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "hyperpyyaml>=1.2.2",
    "inflect>=7.5.0",
    "librosa>=0.11.0",
    "lightning>=2.6.0",
    "matcha-tts>=0.0.7.2",
    "modelscope>=1.33.0",
    "numpy<2.0",
    "omegaconf>=2.3.0",
    "onnx==1.19.1",
    "onnxruntime==1.21.1",
    "onnxruntime-gpu==1.21.1",
    "openai-whisper>=20250625",
    "pyworld>=0.3.5",
    "silero-stress>=1.3",
    "tensorrt-llm==1.0.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "torchcodec>=0.9.1",
    "transformers>=4.53.1",
    "wetext>=0.1.2",
    "wget>=3.2",
    "x-transformers>=2.11.24",
]

[tool.hatch.build.targets.wheel]
packages = ["cosyvoice", "fastcosyvoice"]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
name = "nvidia"
explicit = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch-cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
tensorrt-llm = { index = "nvidia" }
